# page-loader

./: .gitignore  Makefile  README.md  pyproject.toml
page_loader/: __init__.py  common.py  core.py  log.py  logger.py  naming.py  parser.py  resources.py  validator.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_common.py  test_core.py  test_naming.py  test_resources.py  test_validator.py
tests/fixtures/: page.html  page2.html  prettify_page.html
