[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Download pages from network and save them to the local drive."
authors = ["zluuba <zluyba.nikitina@gmail.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "page_loader"}]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
bs4 = "^0.0.1"
validators = "^0.20.0"
responses = "^0.22.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pyfakefs = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
