[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Download pages from network and save them to the local drive."
authors = ["zluuba <zluyba.nikitina@gmail.com>"]
license = "Proprietary"
readme = "README.md"
repository = "https://github.com/zluuba/page-loader"
packages = [{include = "page_loader"}]
classifiers = [
    "Environment :: Console",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Programming Language :: Python"
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
validators = "^0.20.0"
responses = "^0.22.0"
beautifulsoup4 = "^4.11.2"
progress = "^1.6"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
pyfakefs = "^5.1.0"
pytest = "^7.2.2"
requests-mock = "^1.10.0"

#[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
